# leos-music-shop-api-rust

./: .gitignore  Cargo.toml  README.md
migrations/2022-11-04-221030_create_microphones/: down.sql  up.sql
src/: actions.rs  db.rs  main.rs  routes.rs  schema.rs
src/actions/: microphones.rs  mod.rs
src/models/: microphone.rs
src/routes/: hello.rs  microphones.rs  mod.rs
