[package]
name = "leos-music-shop-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "uuid"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.20" # 0.21.0 blocked on sqlx sqlite update
segment = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
